# anima

./: Cargo.toml  LICENSE  README.md
.github/workflows/: .yml  build.yml
src/: anime_db.rs  anime_list.rs  main.rs
src/sql/: alt_title_schema.sql  anime_list_history_schema.sql  anime_list_schema.sql  anime_schema.sql  animelist_schema.sql
