[package]
name = "anidb"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = "3.1.0"
zstd = "0.13.3"
serde_json = "1.0"

[dependencies.pico-args]
version = "0.5.0"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rusqlite]
version = "0.37.0"
features = ["bundled"]
